Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-40502

QProgressDialog crashes when setting the same bar/label/button again.

XMLWordPrintable

    • e2331c6f76bda6d19f3b4cb2b9e3cbbfe0bdc2f6

      The following test crashes:

          QPointer<QLabel> l = new QLabel;
          {
              QProgressDialog dlg;
      
              dlg.setLabel(l);
              dlg.setLabel(l);          // setting the same widget again should not cras, but does
          }
      

      Same with setBar() and setCancelButton().

        For Gerrit Dashboard: QTBUG-40502
        # Subject Branch Project Status CR V

            mmutz Marc Mutz
            mmutz Marc Mutz
            Votes:
            0 Vote for this issue
            Watchers:
            2 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes